	  generate a macro file for each component which contains only
	  information about the direct dependencies of that component.
	  Consequently, 'dist/build/autogen/cabal_macros.h' contains
	  only the macros for the library, and is not generated if a
	  package has no library; to find the macros for an executable
	  named 'foobar', look in 'dist/build/foobar/autogen/cabal_macros.h'.
	  Similarly, 'autogenModulesDir' now requires a
	  'ComponentLocalBuildInfo' argument as well in order to
	  disambiguate which component the autogenerated files are for.
	* Backwards incompatible change to 'Component': 'TestSuite' and
	  'Benchmark' no longer have 'testEnabled' and
	  'benchmarkEnabled'.  If you used
	  'enabledTests' or 'enabledBenchmarks', please instead use
	  'enabledTestLBIs' and 'enabledBenchLBIs'
	  (you will need a 'LocalBuildInfo' for these functions.)
	  Additionally, the semantics of 'withTest' and 'withBench'
	  have changed: they now iterate over all buildable
	  such components, regardless of whether or not they have
	  been enabled; if you only want enabled components,
	  use 'withTestLBI' and 'withBenchLBI'.
	  'finalizePackageDescription' is deprecated:
	  its replacement 'finalizePD' now takes an extra argument
	  'ComponentEnabledSpec' which specifies what components
	  are to be enabled: use this instead of modifying the
	  'Component' in a 'GenericPackageDescription'.  (As
	  it's not possible now, 'finalizePackageDescription'
	  will assume tests/benchmarks are disabled.)
	  If you only need to test if a component is buildable
	  (i.e., it is marked buildable in the Cabal file)
	  use the new function 'componentBuildable'.
	* Add support for `--allow-older` (dual to `--allow-newer`) (#3466)
	* Improved an error message for process output decoding errors
	(#3408).

1.24.0.0 Ryan Thomas <ryan@ryant.org> March 2016
	* Support GHC 8.
	* Deal with extra C sources from preprocessors (#238).
	* Include cabal_macros.h when running c2hs (#2600).