@@ -249,7 +249,7 @@ componentCcGhcOptions _verbosity _implInfo lbi bi clbi odir filename =
       ghcOptMode           = toFlag GhcModeCompile,
       ghcOptInputFiles     = toNubListR [filename],
 
-      ghcOptCppIncludePath = toNubListR $ [autogenModulesDir lbi clbi, odir]
+      ghcOptCppIncludePath = toNubListR $ [autogenComponentModulesDir lbi clbi, odir]
                                           ++ PD.includeDirs bi,
       ghcOptPackageDBs     = withPackageDB lbi,
       ghcOptPackages       = toNubListR $ mkGhcOptPackages clbi,
@@ -284,12 +284,12 @@ componentGhcOptions _verbosity lbi bi clbi odir =
       ghcOptSplitObjs       = toFlag (splitObjs lbi),
       ghcOptSourcePathClear = toFlag True,
       ghcOptSourcePath      = toNubListR $ [odir] ++ (hsSourceDirs bi)
-                                           ++ [autogenModulesDir lbi clbi],
-      ghcOptCppIncludePath  = toNubListR $ [autogenModulesDir lbi clbi, odir]
+                                           ++ [autogenComponentModulesDir lbi clbi],
+      ghcOptCppIncludePath  = toNubListR $ [autogenComponentModulesDir lbi clbi, odir]
                                            ++ PD.includeDirs bi,
       ghcOptCppOptions      = toNubListR $ cppOptions bi,
       ghcOptCppIncludes     = toNubListR $
-                              [autogenModulesDir lbi clbi </> cppHeaderName],
+                              [autogenComponentModulesDir lbi clbi </> cppHeaderName],
       ghcOptFfiIncludes     = toNubListR $ PD.includes bi,
       ghcOptObjDir          = toFlag odir,
       ghcOptHiDir           = toFlag odir,
