@@ -19,7 +19,8 @@
 	  only the macros for the library, and is not generated if a
 	  package has no library; to find the macros for an executable
 	  named 'foobar', look in 'dist/build/foobar/autogen/cabal_macros.h'.
-	  Similarly, 'autogenModulesDir' now requires a
+	  Similarly, if you used 'autogenModulesDir' you should now
+	  use 'autogenComponentModulesDir', which now requires a
 	  'ComponentLocalBuildInfo' argument as well in order to
 	  disambiguate which component the autogenerated files are for.
 	* Backwards incompatible change to 'Component': 'TestSuite' and
